# SLM

./: .gitignore  .pre-commit-config.yaml  Makefile  environment.yml  pyproject.toml  requirements.txt
configs/: data.yaml  model.yaml  tokenizer.yaml  train_full.yaml  train_pilot.yaml
data/: __init__.py  curriculum.py  deduplicate.py  download.py  filter.py  pack.py  pipeline.py
model/: __init__.py  attention.py  block.py  config.py  ffn.py  rmsnorm.py  rope.py  transformer.py
scripts/: generate_regression.py  split_val.py  train.py
tests/integration/: test_model_integration.py
tests/unit/: test_attention.py  test_model.py  test_tokenizer.py  test_tokenizer_perf.py  test_transformer.py  tokenizer_regression.json
tokenizer/: __init__.py  tokenizer.py  train.py
train/: __init__.py  checkpoint.py  config.py  data.py  logger.py  optim.py  scheduler.py  trainer.py
